# python-playground

./: any_testing.py  arg-parse-tut.py  arg_inspect.py  array_pop.py  base64_test.py  cProfile_test.py  check_sandbox_type.py  class_inheritance.py  class_member_test.py  class_reset.py  class_test.py  class_to_dict.py  class_to_dict_nested.py  closures.py  const_test.py  contiguous_combos.py  datetime_to_seconds.py  decorator_test.py  default_dict.py  delete_files.py  dict_iteritems_testing.py  dict_merging.py  exception_member_test.py  exception_variable.py  exception_with_custom_data_test.py  finally_test.py  foo.json  ftp_test.py  hello_world.py  inspect_stack_test.py  json_log_formatter.py  json_testing.py  kwargs test.py  list_chunking.py  list_to_string.py  multi_processing.py  nested_loops.py  parse_version_test.py  ping.py  pycharm_shortcut_testing.py  (+21 more)
Selenium/: selenium_demo.py  top_scorers.xls
abc_testing/: abc_test.py
arg-parse/: arg_parse_test.py
asyncio-test/: async_exception_testing.py  async_sanity.py  asyncio_simple_example.py  asyncio_while_loops.py  tenacity_async_test.py
click-testing/: click-progress.py
cookiecutter-testing/: cookiecutter_template.py
cookiecutter-testing/my-awesome-package/: LICENSE  README.MD  setup.cfg  tox.ini
csv-test/: natti.csv  read_csv.py
csv-testing/: dict_to_csv.py  dict_to_str.py
dataclass-testing/: dacite_test.py  dataclass_json_library_test.py  dataclass_to_dict.py
dir-testing/: dir_testing.py  get_dir_path_from_path.py  make_dir.py  module1.py
docker-pull/: docker_pull.py
heap_test/: min_heap.py
(+84 files in other folders)
