[metadata]
name = my-awesome-package
version = file: version.txt
author = Anonymous
author_email = Anonymous@gmail.com
description = This package is awesome
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/Anonymous/my-awesome-package
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src